--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" type="image/x-icon" href="/assets/alchemy-favicon.png" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web UI Project</title>
+    <title>Calculator</title>
 </head>
 
 <body>
     <header>
         <img src="assets/html_css_js.png">
-        <h1>Web UI Project</h1>
+        <h1>Calculator</h1>
     </header>
 
     <main>
-
+        <section>
+            <input id="add-input-1">
+            +
+            <input id="add-input-2">
+            <button id="add-button">=</button>
+            <span id="add-result">?</span>
+        </section>
     </main>
 
     <footer>&copy;2021 Aspiring Software Developer</footer>
